Refactor code, fix some endpoints and possible bugs